fix(): Fixing background image

--- a/index.html
+++ b/index.html
@@ -8,61 +8,76 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
-        <div class="header__container _container">
-            <div class="header__top">
-                <div class="header__logo logo-header">
-                    <div class="logo-header__icon"><a href="#">OFDR</a></div>
-                    <div class="logo-header__text"><span >центр профессиональной дистанционной переподготовки кадров</span></div>
-                </div>
-                <div class="header__socials socials-header">
-                    <div class="socials-header__icon socials-header__icon_whatsapp"><a href="#"><img src="images/whatsapp.png" alt="whatsapp"></a></div>
-                    <div class="socials-header__icon socials-header__icon_viber"><a href="#"><img src="images/viber.png" alt="viber"></a></div>
-                    <div class="socials-header__icon socials-header__icon_telegram"><a href="#"><img src="images/telegram.png" alt="
-                        telegram"></a></div>
-                </div>
-                <div class="header__info info-header">
-                    <div class="info-header__contacts">
-                        <div class="info-header__wrapper info-header__wrapper_1"><a class="info-header__number" href="tel:88000000000">8 800 000-00-00</a></div>
-                        <div class="info-header__wrapper info-header__wrapper_2"><a href="email@email.com" class="info-header__mail">email@email.com</a></div>
-                    </div>
-                    <div class="info-header__calback"><button class="button button_light">Заказать звонок</button></div>
-                </div>
-            </div>
-            <div class="header__bottom">
-                <nav class="header__nav">
-                    <ul class="header__list list-header">
-                        <li class="list-header__item"><a href="#" class="list-header__link">Курсы</a></li>
-                        <li class="list-header__item"><a href="#" class="list-header__link">АТТЕСТАЦИЯ</a></li>
-                        <li class="list-header__item"><a href="#" class="list-header__link">ОХРАНА ТРУДА</a></li>
-                        <li class="list-header__item"><a href="#" class="list-header__link">ПОЖАРНАЯ БЕЗОПАСНОСТЬ</a></li>
-                        <li class="list-header__item"><a href="#" class="list-header__link">СВИДЕТЕЛЬСТВО ДОПОГ</a></li>
-                        <li class="list-header__item"><a href="#" class="list-header__link">ПРАВА НА СПЕЦТЕХНИКУ</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-        <main class="page">
-            <section class="welcome-page">
-                <div class="welcome-page__container _container">
-                    <div class="welcome-page__info">
-                        <div class="welcome-page__text">
-                            Оформление допусков, удостоверений всех строительных и рабочих специальностей
+       <main class="page">
+           <div class="content">
+              <header class="header">
+                    <div class="header__container _container">
+                        <div class="header__top">
+                            <div class="header__logo logo-header">
+                                <div class="logo-header__icon"><a href="#">OFDR</a></div>
+                                <div class="logo-header__text"><span >центр профессиональной дистанционной переподготовки кадров</span></div>
+                            </div>
+                            <div class="header__socials socials-header">
+                                <div class="socials-header__icon socials-header__icon_whatsapp"><a href="#"><img src="images/whatsapp.png" alt="whatsapp"></a></div>
+                                <div class="socials-header__icon socials-header__icon_viber"><a href="#"><img src="images/viber.png" alt="viber"></a></div>
+                                <div class="socials-header__icon socials-header__icon_telegram"><a href="#"><img src="images/telegram.png" alt="
+                                    telegram"></a></div>
+                            </div>
+                            <div class="header__info info-header">
+                                <div class="info-header__contacts">
+                                    <div class="info-header__wrapper info-header__wrapper_1"><a class="info-header__number" href="tel:88000000000">8 800 000-00-00</a></div>
+                                    <div class="info-header__wrapper info-header__wrapper_2"><a href="email@email.com" class="info-header__mail">email@email.com</a></div>
+                                </div>
+                                <div class="info-header__calback"><button class="button button_light">Заказать звонок</button></div>
+                            </div>
                         </div>
-                        <div class="welcome-page__subtext">
-                            аттестация ИТР <span><strong>от 2500 руб</strong></span>
+                        <div class="header__bottom">
+                            <nav class="header__nav">
+                                <ul class="header__list list-header">
+                                    <li class="list-header__item"><a href="#" class="list-header__link">Курсы</a></li>
+                                    <li class="list-header__item"><a href="#" class="list-header__link">АТТЕСТАЦИЯ</a></li>
+                                    <li class="list-header__item"><a href="#" class="list-header__link">ОХРАНА ТРУДА</a></li>
+                                    <li class="list-header__item"><a href="#" class="list-header__link">ПОЖАРНАЯ БЕЗОПАСНОСТЬ</a></li>
+                                    <li class="list-header__item"><a href="#" class="list-header__link">СВИДЕТЕЛЬСТВО ДОПОГ</a></li>
+                                    <li class="list-header__item"><a href="#" class="list-header__link">ПРАВА НА СПЕЦТЕХНИКУ</a></li>
+                                </ul>
+                            </nav>
                         </div>
-                        <button class="button button_primary">Заказать</button>
                     </div>
-                    <div class="welcome-page__banner">
-                        <img src="images/person.png" alt="person" />
-                    </div>
+        </header>
+              <section class="welcome-page">
+                    <div class="welcome-page__container _container">
+                       <div class="welcome-page__info">
+                           <div class="welcome-page__content">
+                                <div class="welcome-page__text">
+                                   Оформление допусков, удостоверений всех строительных и рабочих специальностей
+                               </div>
+                               <div class="welcome-page__subtext">
+                                   аттестация ИТР <span><strong>от 2500 руб</strong></span>
+                               </div>
+                               <button class="button button_primary">Заказать</button>
+                           </div>
+                       </div>
+                       <div class="welcome-page__banner">
+                           <img src="images/person.png" alt="person" />
+                       </div>
+                   </div>
+              </section>
+           </div>
+            <section class="document-types">
+                <div class="document-types__container _container">
+                    <h3 class="document-types__title">Какие документы хотите оформить?</h3>
+                    <div class="document-types__elements">
+                        <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/excavator.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                     </div>
                 </div>
             </section>
-        </main>
+       </main>
         <footer>
-            
+            I am foooter
         </footer>
     </div>
 </body>
