feature(): new blogs

--- a/index.html
+++ b/index.html
@@ -72,7 +72,77 @@
                             <div class="document-types__img"><img src="images/excavator.png" alt="excavator"></div>
                             <div class="document-types__text">Гражданская оборона и ЧС</div>
                         </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/engineer.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/factory.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/fire-extinguisher.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/fireman.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/plug.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/settings.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                         <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/worker.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                        <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/tracktor.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                        <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/toxic-waste.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                        <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/Shape.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
+                        <div class="document-types__element">
+                            <div class="document-types__img"><img src="images/plug.png" alt="excavator"></div>
+                            <div class="document-types__text">Гражданская оборона и ЧС</div>
+                        </div>
                      </div>
+                </div>
+            </section>
+            <section class="garantee">
+                <div class="garantee__container _container">
+                    <div class="garantee_items">
+                        <div class="garantee__item">
+                            <div class="garantee__img"><img src="images/garantee/Shape.svg" alt=""></div>
+                            <div class="garantee__title">Документы в срок</div>
+                            <div class="garantee__text">Мы четко соблюдаем сроки, так как дорожим вашим временем</div>
+                        </div>
+                         <div class="garantee__item">
+                            <div class="garantee__img"><img src="images/garantee/favorites.svg" alt=""></div>
+                            <div class="garantee__title">100% качество наших услуг</div>
+                            <div class="garantee__text">Мы несем полную ответственность за свою работу</div>
+                        </div>
+                         <div class="garantee__item">
+                            <div class="garantee__img"><img src="images/garantee/file.svg" alt=""></div>
+                            <div class="garantee__title">Гарантия подлинности документов</div>
+                            <div class="garantee__text">У нас есть все необходимые лицензии и сертификаты</div>
+                        </div>
+                         <div class="garantee__item">
+                            <div class="garantee__img"><img src="images/garantee/delivery-truck.svg" alt=""></div>
+                            <div class="garantee__title">Гарантия быстрой доставки</div>
+                            <div class="garantee__text">Доставляем в любой город России</div>
+                        </div>
+                    </div>
                 </div>
             </section>
        </main>
